; ModuleID = '/home/carl/AnghaBench/esp-idf/components/sdmmc/test/extr_test_sd.c_sd_test_board_power_on.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/sdmmc/test/extr_test_sd.c_sd_test_board_power_on.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SD_TEST_BOARD_VSEL_GPIO = common dso_local global i32 0, align 4
@GPIO_MODE_OUTPUT = common dso_local global i32 0, align 4
@SD_TEST_BOARD_VSEL_3V3 = common dso_local global i32 0, align 4
@SD_TEST_BOARD_VSEL_EN_GPIO = common dso_local global i32 0, align 4
@SD_TEST_BOARD_PWR_RST_DELAY_MS = common dso_local global i32 0, align 4
@SD_TEST_BOARD_PWR_ON_DELAY_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sd_test_board_power_on to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sd_test_board_power_on() #0 {
  %1 = load i32, i32* @SD_TEST_BOARD_VSEL_GPIO, align 4
  %2 = load i32, i32* @GPIO_MODE_OUTPUT, align 4
  %3 = call i32 @gpio_set_direction(i32 %1, i32 %2)
  %4 = load i32, i32* @SD_TEST_BOARD_VSEL_GPIO, align 4
  %5 = load i32, i32* @SD_TEST_BOARD_VSEL_3V3, align 4
  %6 = call i32 @gpio_set_level(i32 %4, i32 %5)
  %7 = load i32, i32* @SD_TEST_BOARD_VSEL_EN_GPIO, align 4
  %8 = load i32, i32* @GPIO_MODE_OUTPUT, align 4
  %9 = call i32 @gpio_set_direction(i32 %7, i32 %8)
  %10 = load i32, i32* @SD_TEST_BOARD_VSEL_EN_GPIO, align 4
  %11 = call i32 @gpio_set_level(i32 %10, i32 0)
  %12 = load i32, i32* @SD_TEST_BOARD_PWR_RST_DELAY_MS, align 4
  %13 = mul nsw i32 %12, 1000
  %14 = call i32 @usleep(i32 %13)
  %15 = load i32, i32* @SD_TEST_BOARD_VSEL_EN_GPIO, align 4
  %16 = call i32 @gpio_set_level(i32 %15, i32 1)
  %17 = load i32, i32* @SD_TEST_BOARD_PWR_ON_DELAY_MS, align 4
  %18 = mul nsw i32 %17, 1000
  %19 = call i32 @usleep(i32 %18)
  ret void
}

declare dso_local i32 @gpio_set_direction(i32, i32) #1

declare dso_local i32 @gpio_set_level(i32, i32) #1

declare dso_local i32 @usleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
